src/app/bug-details/bug-details.component.scss
:host {
  display: flex;
  flex: 2;
  max-width: 70em;
  overflow: auto;
  flex-direction: column;
}

.result {
  display: inline-table;
  margin: 0.5em;
  padding-bottom: 0;
}

.addition-params {
  display: flex;
  margin: 1em;
}

.addition-data {
  display: block;
}

.comment-text {
  white-space: pre-wrap;
  word-break: break-word;
}

.addition-params-icon {
  margin: auto;
  padding-right: 1em;
}

.addition-params-data {
  flex: 1;
  margin: auto;
}

.addition-params-space {
  display: flex;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.creator-image {
  width: 2em;
    background-size: cover;
    width: 4em;
    height: 4em;
    flex-shrink: 0;
    object-fit: cover;
}

.avatar-image {
  width: inherit;
  height: inherit;
}

.comment {
  padding: 0;
  display: flex;
}
.main-comment {
  flex-direction: column;
}

.left-block-comment {
  background-color: #e2e2e2;
}

.right-block-comment {
  flex: 1;
  display: block;
}

.comment-date {
  font-size: 0.8em;
  float: right;
  margin: 0.3em;
}

.comment-text {
  margin: 0.5em;
}

.bugzilla-image {
  width: 4em;
  height: 4em;
  background-image: url(/assets/images/bugzilla.jpeg);
  background-size: cover;
}

.space {
 flex: 1;
}

.addition-params-bugzilla-link {
  cursor: pointer;
}

.attachment-name {
  display: inline-block;
}

.bug-detail-header {
  flex: 1;
}

.new-comment-form {
  width: 100%;
  margin-left: 1em;
}

.comment-form {
  display: flex;
}

.red-color-status {
  color: red;

}

.new-comment {
  margin-bottom: 20em;
}

.new-comment-text-area {
  height: 11;
}

.actions {
  display: inline-block;
}

.severity-change-comment {
  display: inline-block;
  margin: 0 1em;
}

.status-change-comment {
  display: inline-block;
  margin: 0 1em;
}

.send-comment-button {
  place-self: flex-end;
  margin: 0.5em;
}

.new_comment_space_for_loading {
  padding-top: 4px;
}

